# society-bug-bounty

./: .env.template  .gitignore  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0372e0d0ac17_create_initial_database_schema.py  85c78c7b9822_add_userstats_model.py  922ca715b570_soft_delete_programs.py
backend/app/: celery_config.py  celery_worker.py  main.py
backend/app/cli/: main.py  manage_organizations.py  manage_users.py  utils.py
backend/app/core/: config.py  database.py  dependencies.py  error_codes.py  exceptions.py  logging.py
backend/app/src/: __init__.py
backend/app/src/asset_types/: __init__.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/app/src/attachments/: __init__.py  models.py  repository.py  schemas.py  service.py
backend/app/src/notifications/: __init__.py  email.py  i18n.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/app/src/organizations/: __init__.py  models.py  repository.py  schemas.py  service.py
backend/app/src/programs/: __init__.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/app/src/reports/: __init__.py  models.py  repository.py  routes.py  schemas.py  (+1 more)
backend/app/tasks/: __init__.py  maintenance.py  notifications.py
backend/app/utils/: image_upload_service.py  migrations.py  turnstile_service.py  username_generator.py
backend/scripts/: backfill_leaderboard.py  seed_leaderboard.py
(+97 files in other folders)
